example-templates/daemon-set.yaml
apiVersion: apps/v1

kind: DaemonSet

metadata:
  name: node-logger
  labels:
    app: node-logger

spec:
  selector:
    matchLabels:
      name: node-logger
  template:
    metadata:
      labels:
        name: node-logger
    spec:
      # > target specific nodes 
      # nodeSelector:
      #   disktype: ssd
      containers:
      - name: logger
        image: busybox
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo '📘 Logging from $(hostname)'; sleep 10; done"]
        resources:
          limits:
            memory: "32Mi"
            cpu: "100m"
      restartPolicy: Always

# DaemonSets are great when you want to run one pod per node
# like for logging agents, monitoring, or node-local tools.

# kubectl apply -f daemonset.yaml
# kubectl get daemonset
# kubectl get pods -l name=node-logger -o wide
# kubectl logs <one-of-the-pods>
