example-templates/my-pod-health.yaml
apiVersion: v1

kind: Pod

metadata:
  name: my_pod
spec:
  containers:
    - image: gcr.io/my_pod-demo/my_pod-amd64:red
      name: my_pod
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
