example-templates/my-pod-resreq.yaml
apiVersion: v1

kind: Pod

metadata:
  name: my_pod

spec:
  containers:
    - image: gcr.io/my_pod-demo/my_pod-amd64:red
    name: my_pod
    resources:
      requests:
        cpu: "500m"
        memory: "128Mi"
    ports:
      - containerPort: 8080
        name: http
        protocol: TCP
