example-templates/my_pod-pod-full.yaml
apiVersion: v1

kind: Pod

metadata:
  name: kuard

spec:
  volumes:
    - name: "kuard-data"
      nfs:
        server: my.nfs.server.local
        path: "/exports"
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      resources:
        requests:
          cpu: "500m"
          memory: "128Mi"
        limits:
          cpu: "1000m"
          memory: "256Mi"
      volumeMounts:
        - mountPath: "/data"
          name: "kuard-data"
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        initialDelaySeconds: 30
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3

# > kubectl describe service alpaca-prod
# 
# Name: alpaca-prod
# Namespace: default
# Labels: app=alpaca
# env=prod
# ver=1
# Annotations: <none>
# Selector: app=alpaca,env=prod,ver=1
# Type: NodePort
# IP: 10.115.245.13
# Port: <unset> 8080/TCP
# NodePort: <unset> 32711/TCP
# Endpoints: 10.112.1.66:8080,10.112.2.104:8080,10.112.2.105:8080
# Session Affinity: None
# No events.
