example-templates/my_pod-pod-vol.yaml
apiVersion: v1

kind: Pod

metadata:
  name: my_pod

spec:
  volumes:
  - name: "my_pod-data"
    hostPath:
      path: "/var/lib/my_pod"
  containers:
    - image: gcr.io/my_pod-demo/my_pod-amd64:red
      name: my_pod
      volumeMounts:
    - mountPath: "/data"
      name: "my_pod-data"
      ports:
    - containerPort: 8080
      name: http
      protocol: TCP
