example-templates/pod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: my_pod
spec:
  containers:
    - image: gcr.io/my_pod/my_pod-amd64:red
      name: my_pod
      ports:
        - containerPort: 8080
        name: http
        protocol: TCP
