example-templates/stateful-set.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:
  name: web

spec:
  serviceName: "web"
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi

# when your application needs stable identity and storage, such as databases, 
# distributed systems, or apps that require ordered deployment and graceful shutdown.

# Stable DNS names
# Stable storage
# Ordered start/stop
# Ordered rolling updates

# kubectl delete statefulset web
# kubectl delete pvc -l app=nginx
