example-templates/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP

# k8s Service that exposes a pod running Nginx on port 8080 internally within
# the cluster (ClusterIP). The service is named nginx-service.
